--- a/content/00.zksync-network/65.zksync-os/07.quickstart.md
+++ b/content/00.zksync-network/65.zksync-os/07.quickstart.md
@@ -4,7 +4,7 @@ description: Getting starting developing with ZKsync OS
 ---
 
 You can use all standard EVM tooling for ZKsync OS.
-You can find instructions for bridging testnet ETH to ZKsync OS devnet in the [Network Details](/zksync-network/zksync-os/network-details) page.
+You can find instructions for bridging testnet ETH to ZKsync OS devnet in the [Network Details](/zksync-network/zksync-os/network-details) **TBD ADI Links** page.
 
 To get started with Foundry or Hardhat, follow the steps below:
 
@@ -23,7 +23,7 @@ Select your preferred setup tab:
 {% tab title="Linux" %} Here are the instructions for Linux {% endtab %}
 
 {% endtabs %}
-
+---
 
 # 🧱 Foundry Setup
 
